recursion.logo.koch.SquareKoch.scala.error
Erreur de compilation :
SquareKoch:24: error: not found: value snowSide
  snowSide(levels-1,length/3)
  ^SquareKoch:26: error: not found: value snowSide
      snowSide(levels-1,length/3)
      ^SquareKoch:28: error: not found: value snowSide
      snowSide(levels-1,length/3)
      ^SquareKoch:30: error: not found: value snowSide
      snowSide(levels-1,length/3)
      ^